# substreams-playground

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  DESIGN.md  Dockerfile  README.md  build-all.sh  erc20transfer-manifest.yaml  gen.go  go.mod  go.sum  native_substreams_manifest.yaml  rust-toolchain.toml  sample_substreams.yaml  substreams_manifest.yaml  tokens_manifest.yaml  toto.sh  wasm_substreams_manifest.yaml
.github/workflows/: main.yml
cli/exchange/: flags.go  graphnode.go  load_graph.go  local.go  logging.go  main.go  mongo.go  remote.go  root.go  setup.go
client-examples/: README.md
client-examples/go-client/: go.mod  go.sum  main.go
client-examples/go-pancakeswap-client/: go.mod
client-examples/rust-client/: Cargo.toml  build.rs  gen.go
cmd/exchange/: generated.go  logging.go  main.go  return_handler.go
cmd/sseth/: main.go
cmd/substream-exchange/: main.go
cmd/substreams-pcs/: main.go
codec/: block.go  blocks.go  decoder.go  init.go  logging.go  reader.go
consumers/: README.md
consumers/golang/: go.mod  go.sum  main.go
consumers/node/: README.md  buf.gen.yaml  buf.yaml  package.json  pnpm-lock.yaml  tsconfig.json
consumers/pancakeswap-to-graphnode/: README.md  go.mod  go.sum
consumers/python/: README.md  main.py
erc20-rust/: Cargo.toml  build.rs  build.sh  gen.go
erc20-rust/src/: eth.rs  lib.rs  utils.rs
erc20-rust/src/pb/: mod.rs  sf.substreams.erc20transfer.v1.rs
eth-token/: Cargo.toml  build.rs  substreams-eth-token.yaml
eth-token/src/: eth.rs  lib.rs  rpc.rs
exchange/: generated.go  handle_factory_pair_created_event_test.go  handle_pair_burn_event.go  handle_pair_burn_event_test.go  handle_pair_swap_event.go  handle_pair_sync_event.go  handle_pair_sync_event_test.go  handle_pair_transfer_event.go  logging.go  runtime.go  statebuilder.go  statebuilder_io.go  statebuilder_test.go  substreams_intrinsics.go  substreams_mint_burn_swaps_extractor.go  substreams_pair_extractor.go  substreams_pairextractor.go  substreams_pairpricestore.go  substreams_pairs.go  substreams_pairsstore.go  substreams_prices.go  substreams_pricestore.go  substreams_pricestore_test.go  substreams_reserveextractor.go  substreams_reserves.go  substreams_reserves_extractor.go  substreams_reservesextractor.go  substreams_statebuilder.go  substreams_swapsextractor.go  substreams_tokenextractor.go  substreams_totalpairstore.go  substreams_totals.go  substreams_utils.go  substreams_volume24h.go  substreams_volumes.go  substreamtypes.go  testing.go  updates.go  utils.go
external-proto/: codec_eth.proto
manifest/: main.go  manifest.go  manifest_test.go  yaml.go
manifest/test/: test_manifest.yaml
modules/eth-block-producers/: Cargo.toml  substreams.yaml
modules/eth-token/: Cargo.toml  substreams-at-pcs.yaml  substreams.yaml
modules/eth-token/proto/: tokens.proto
modules/eth-token/src/: lib.rs  rpc.rs
modules/eth-token/src/pb/: mod.rs
modules/fork-handling/: Cargo.toml  substreams.yaml
modules/fork-handling/proto/fork/v1/: fork.proto
modules/fork-handling/src/: lib.rs
modules/fork-handling/src/pb/: fork.v1.rs  mod.rs
modules/pancakeswap/: .gitignore  Cargo.toml  README.md  substreams.yaml
modules/pancakeswap/src/: db.rs  eth.rs  event.rs  lib.rs  rpc.rs  utils.rs
modules/pancakeswap/src/pb/: mod.rs  pcs.database.v1.rs
modules/sol-spl-tokens/: Cargo.toml  README.md  build.rs  substreams.yaml
modules/sol-spl-tokens/proto/: confirmed_block.proto  solana_spl.proto
modules/sol-spl-tokens/src/: helper.rs  instruction.rs  keyer.rs  lib.rs  option.rs
modules/sol-spl-tokens/src/pb/: google.protobuf.rs  mod.rs  sf.solana.type.v1.rs  solana.spl.v1.rs  solana.storage.confirmed_block.rs
modules/uniswap/: Cargo.toml  build.rs  substreams.yaml
modules/uniswap/src/: lib.rs  util.rs
modules/uniswap/src/abi/: factory.rs
modules/uniswap/src/contracts/: factory.rs
old-sparkle-pcs/exchange/: entities.go  handle_factory_pair_created_event.go  handle_pair_mint_event.go  handle_pair_swap_event.go  handle_pair_sync_event.go  handle_pair_transfer_event.go  subgraph.go
old-sparkle-pcs/subgraph/: exchange.graphql
pancakeswap/: generated.go  logging.go  return_handler.go
pb/: generate.sh  last_generate.txt
pcs-go/: gen.go  generated.go  logging.go  native_substreams_manifest.yaml  pcs.go  pcs.pb.go  substreams_mint_burn_swaps_extractor.go  substreams_pair_extractor.go  substreams_pairs.go  substreams_prices.go  substreams_reserves.go  substreams_reserves_extractor.go  substreams_tokenextractor.go  substreams_totals.go  substreams_volumes.go  substreamtypes.go  utils.go
pcs-rust/: Cargo.toml  README.md  build.rs  build.sh  substreams.yaml
pcs-rust/proto/: pcs.proto  substreams.proto
pcs-rust/src/: db.rs  eth.rs  eth_utils.rs  event.rs  externs.rs  lib.rs  lib.rs.orig  log.rs  macros.rs  memory.rs  pcs.rs  proto.rs  rpc.rs  state.rs  state_helper.rs  substream.rs  utils.rs
pipeline/: logging.go  pipeline.go  shub.go
proto/: erc20transfer.proto  pcs.proto  tokens.proto
rust-client/: README.md  build.rs  build.sh
rust-client/src/: main.rs
sol-spl-tokens/: README.md  build.rs  substreams.yaml
sol-spl-tokens/proto/: sf_solana_type_v1.proto  solana_spl.proto
sol-spl-tokens/src/: lib.rs
state/: builder.go  builder_test.go  interface.go  io.go  merge.go  merge_test.go
subgraph/: exchange.yaml
subscription/: hub.go  subscriber.go
substreams-examples/erc20/: build.rs
substreams-examples/eth-token/: .gitignore  Cargo.toml  build.rs  gen.go  substreams-at-pcs.yaml  substreams.yaml
substreams-examples/pancakeswap/: build.rs  pcs-substreams.pb  substreams.yaml  substreams.yaml.pb
substreams-examples/uniswap/: Cargo.toml  build.rs
substreams-examples/uniswap/src/: lib.rs
substreams-examples/uniswap/src/pb/: mod.rs
uniswap/: Cargo.toml  README.md  build.sh  substream.yaml
uniswap/proto/: modules.proto
uniswap/src/: lib.rs
uniswap/src/contracts/: factory.rs
uniswap/src/pb/: uniswap.types.v1.rs
wasm/: build-examples.sh  heap.go  inputs.go  runtime.go  runtime_test.go  utils.go
wasm-filters/: gen.go
(+81 files in other folders)
