[package]
name = "substreams-eth-token"
version = "0.1.0"
description = "Substreams for Ethereum tokens"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.79"
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4.3"
substreams = { version = "0.0.8-beta", path = "../../../substreams/rust/substreams" }
substreams-ethereum = { version = "0.1.0", path= "../../../substreams-ethereum/core" }
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"