[package]
name = "fork-handling"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ethabi = "17.0"
wasm-bindgen = "0.2.79"
prost = "0.11.0"
prost-types = "0.11.0"
hex = "0.4.3"
substreams = { version = "0.1.1" }
substreams-ethereum = { version = "0.3.0" }

[build-dependencies]
prost-build = "0.11.0"
anyhow = "1"
substreams-ethereum = { version = "0.3.0" }
