[package]
name = "sol-spl-tokens"
version = "0.1.0"
description = "Solana SPL Token Transfers Substreams"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.4.0"
wasm-bindgen = "0.2.79"
prost = { version = "0.10.1" }
prost-types = "0.10.1"
hex = "0.4.3"
substreams = "0.0.11"
substreams-solana = "0.1.0"
num-bigint = "0.4"
bigdecimal = "0.3"
pad = "0.1"

[build-dependencies]
prost-build = "0.10.1"
